<?xml version="1.0"?>
<package>
  <name>ardumotor</name>
  <version>0.0.1</version>
  <description>This package contains ROS nodes for controlling motor drivers.</description>

  <maintainer email="cto@lxrobotics.com">Alexander Entinger</maintainer>

  <license>BSD3</license>

  <url type="website">https://github.com/lxrobotics/ardumotor</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>

  <export></export>
</package>
